--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,30 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
+  <div class="header">
+    <h1>Adam Leidigh</h1>
+    <h2>DevOps Engineer</h2>
+  </div>
 
-  Welcome to the HTML Portfolio Project
+  <div class="tagline">
+    <h3>A little about what I do:</h3>
+    <p>I work as a DevOps enigneer specializing in environment setup and configuration management.</p>
+  </div>
+
+  <div class="skills">
+    <h3>Adam's Skills</h3>
+    <p>SaltStack</p>
+    <ul>
+      <li>HTML</li>
+      <li>Deploy</li>
+      <li>Config Management</li>
+    </ul>
+  </div>
+
+  <div class="contact">
+    <h3>How to Contact Adam:</h3>
+    <p>Thanks for visiting. Get in contact with Adam via Instagram: <a href="https://www.instagram.com/meathead_adam/">@meathead_adam</a></p>
+  </div>
 
 </body>
 </html>
